--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -65,13 +65,13 @@ S.S. Cohen
 
 \chapter{Invocation}
 
-\section*{i. Awareness is the nature of Reality}
+\section{i. Awareness is the nature of Reality}
 
 \begin{quote}
-Without awareness of Reality, can Reality exist? Because this
-awareness-reality, itself free from thought, exists as the source of
-all thoughts, it is called Heart. How to know it? To be as it is
-(thought-free) in the Heart, is to know it.
+  Without awareness of Reality, can Reality exist? Because this
+  awareness-reality, itself free from thought, exists as the source of
+  all thoughts, it is called Heart. How to know it? To be as it is
+  (thought-free) in the Heart, is to know it.
 \end{quote}
 
 This verse and the next form the Invocation, which customarily
@@ -90,7 +90,7 @@ makes knowledge or awareness the criterion of existence, because the
 non-existent cannot make itself known. The color, for example, that is
 not visible, or the sound that is not audible, amount to nothing.
 
-\section*{ii. Fear of death is the driving force behind the quest for immortality}
+\section{ii. Fear of death is the driving force behind the quest for immortality}
 
 \begin{quote}
   Those who have an infinite fear of death take refuge in the Feet of
@@ -120,13 +120,13 @@ death and the thought of death.
 \chapter{Text}
 
 
-\section*{1}
+\section{1. Awareness is All --- the seer and seen, the real and apparent.}
 
 \begin{quote}
-Because the world is seen, we have to infer a common cause (a Lord)
-possessing unlimited powers to appear as the diversity. The pictures
-consisting of names and forms, the seer, the canvas, the light ----
-all these are He Himself.
+  Because the world is seen, we have to infer a common cause (a Lord)
+  possessing unlimited powers to appear as the diversity. The pictures
+  consisting of names and forms, the seer, the canvas, the light ----
+  all these are He Himself.
 \end{quote}
 
 \index{world}\index{Lord}\index{diversity}\index{Self}
@@ -149,13 +149,14 @@ and the sight.
 Pure Consciousness or Pure Mind is thus the pictures, the screen, the
 seer, and the light or sight.
 
-\section*{2}
+\section{2. The triage --- God, soul and world -- is the creation of
+  the ego and disappears with the ego.}
 
 \begin{quote}
-All schools of thought postulate the fundamental triad --- God, soul
-and world --- although all three are manifestations of the One. The
-belief that the three remain eternally lasts only as long as the ``I''
-or ego lasts. To destroy the ego and remain in one's own state is best.
+  All schools of thought postulate the fundamental triad --- God, soul
+  and world --- although all three are manifestations of the One. The
+  belief that the three remain eternally lasts only as long as the ``I''
+  or ego lasts. To destroy the ego and remain in one's own state is best.
 \end{quote}
 
 \index{God}\index{soul}\index{world}\index{Self}
@@ -170,13 +171,14 @@ existence of which these three are an illusory manifestation which,
 however, vanishes the moment the eternal ``I'' is apprehended and the
 ego perishes.
 
-\section*{3}
+\section{3. Speculations about God and world avail nothing:
+  Self-realisation is the hearts cry of all.}
 
 \begin{quote}
-Of what avail to debate whether the world is real or unreal, sentient
-or insentient, pleasant or unpleasant? Extingishing the ego,
-transcending the world, realising the Self --- that is the state which
-is dear to all, and free from the sense of unity and duality.
+  Of what avail to debate whether the world is real or unreal, sentient
+  or insentient, pleasant or unpleasant? Extingishing the ego,
+  transcending the world, realising the Self --- that is the state which
+  is dear to all, and free from the sense of unity and duality.
 \end{quote}
 
 \index{philosophy}
@@ -188,12 +190,13 @@ unreality, God and world, whose true nature will be revealed in actual
 experience. This is the most blissful attainable state and beyond the
 plurality of the illusory world.
 
-\section*{4}
+\section{4. Form and formlessness of God depend on the ego's
+  conception of itself.}
 
 \begin{quote}
-If the Self be with form, God and the world will be also. If one be
-formless oneself, how and by whom can their forms be seen? Can their
-be sight without eyes? The Self is the eye, the limitless Eye.
+  If the Self be with form, God and the world will be also. If one be
+  formless oneself, how and by whom can their forms be seen? Can their
+  be sight without eyes? The Self is the eye, the limitless Eye.
 \end{quote}
 
 \index{form}\index{formless}
@@ -219,11 +222,12 @@ there can be no knowledge of anything, just as without a lamp none of
 the objects present in a darm room can be seen. Can there be a world
 to an unconscious man?
 
-\section*{5}
+\section{5. The world is the body inclusive of the five sheaths, for
+  without them the world cannot be conceived (or perceived)}
 
 \begin{quote}
-The body is in the form of, and includes, the 5 sheathes. Is there a
-world apart from the body? Has anyone without a body seen the world?
+  The body is in the form of, and includes, the 5 sheathes. Is there a
+  world apart from the body? Has anyone without a body seen the world?
 \end{quote}
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
@@ -243,7 +247,7 @@ locomotion. The \emph{manomayakosha} (mental sheath) contains the
 faculties of mentation. The \emph{vijnanamayakosha} is the sheath of
 the intellectual and reasoning faculties, of scientific and
 philosophic thinking, and last is the \emph{anandamayakosha}, the
-sheath of bliss, or causal sheath, which stores up within itslef the
+sheath of bliss, or causal sheath, which stores up within itself the
 karmic seeds of every birth and is concerned with that state in which
 profound peace is enjoyed by the dreamless sleeper. This \emph{kosha}
 is made of the finest substance, \emph{sattva}, which in itself is
@@ -257,12 +261,12 @@ therefore necessary for the world's enjoyment and the body owes its
 existence, as we shall see in the next verse, to the five senses,
 which are the properties of the mind.
 
-\section*{6}
+\section{6. The world is what the mind conceives through the senses.}
 
 \begin{quote}
-The world is but the fivefold sense-objects, which are the results of
-the five senses. Since the mind perceives the world through the
-senses, is there a world without the mind?
+  The world is but the fivefold sense-objects, which are the results of
+  the five senses. Since the mind perceives the world through the
+  senses, is there a world without the mind?
 \end{quote}
 
 \index{world}\index{senses}\index{mind}
@@ -278,13 +282,14 @@ instance. Since all these senses form the world we known and have one
 common origin, which is the mind, the world cannot therefore be other
 than that mind.
 
-\section*{7}
+\section{7. The world rises and sets with the knowledge of it. Both
+  have their source in the Self.}
 
 \begin{quote}
-Although the world and the awareness of it rise and set together, it
-is by awareness that the world is known. The source from which they
-both rise, and into which they both set, always shines without itself
-rising or setting. That alone is real.
+  Although the world and the awareness of it rise and set together, it
+  is by awareness that the world is known. The source from which they
+  both rise, and into which they both set, always shines without itself
+  rising or setting. That alone is real.
 \end{quote}
 
 \index{world}\index{awareness}
@@ -300,12 +305,12 @@ world is the fact of its existence. We cannot affirm the existence of
 an object without first affirming awareness of it. Therefore awareness
 is the only Reality there is.
 
-\section*{8}
+\section{8. Any sincere worship eventually leads to Realization.}
 
 \begin{quote}
-In whatever name and form the nameless and formless is worshipped,
-therein lies the path of its realisation. Realising one's truth as the
-truth of that reality, and merging into it, is true realisation.
+  In whatever name and form the nameless and formless is worshipped,
+  therein lies the path of its realisation. Realising one's truth as the
+  truth of that reality, and merging into it, is true realisation.
 \end{quote}
 
 \index{form}
@@ -320,12 +325,13 @@ in the name of God, and how many wars would have been prevented, had
 this truth been accepted as the one truth underlying all religions,
 the basic world faith!
 
-\section*{9}
+\section{9. The dyads and triads are supported by the One, which can
+  be discovered by inquiry.}
 
 \begin{quote}
-The dyads and triads rest on the basic One. Inquiring about that One
-in the mind, they will disappear. Those who see thus are the seers of
-truth: they remain unruffled.
+  The dyads and triads rest on the basic One. Inquiring about that One
+  in the mind, they will disappear. Those who see thus are the seers of
+  truth: they remain unruffled.
 \end{quote}
 
 \index{dyad}\index{triad}
@@ -340,13 +346,14 @@ perceiving mind. He who realises the world as such retains a uniform
 serenity in all conditions of life.
 
 
-\section*{10}
+\section{10. Knowledge and ignorance are inter-related. Real knowledge
+arises by inquiring for whom both knowledge ignorance occur.}
 
 \begin{quote}
-Knowledge and ignorance are interrelated: the one does not exist
-without the other. Inquiring to whom is it that knowledge and that
-ignorance, and arriving at their root cause, the Self, this is true
-knowledge. 
+  Knowledge and ignorance are interrelated: the one does not exist
+  without the other. Inquiring to whom is it that knowledge and that
+  ignorance, and arriving at their root cause, the Self, this is true
+  knowledge. 
 \end{quote}
 
 \index{knowledge}\index{ignorance}\index{inquiry}\index{Self}
@@ -363,12 +370,13 @@ called first principle because he is efficient, causeless, the eternal
 thinker, who precedes and survives all his thoughts --- ``the basic
 One'' (verse nine).
 
-\section*{11}
+\section{11. Not to seek the Self which is the source of knowledge and
+ignorance is real ignorance}
 
 \begin{quote}
-Is it not ignorance to know all but the all-knowing Self? When the
-latter, the substratum of both knowledge and ignorance, is known,
-knowledge and ignorance themselves both disappear.
+  Is it not ignorance to know all but the all-knowing Self? When the
+  latter, the substratum of both knowledge and ignorance, is known,
+  knowledge and ignorance themselves both disappear.
 \end{quote}
 
 \index{knowledge}\index{ignorance}
@@ -383,13 +391,14 @@ satisfaction, and this lies wholly within ourselves, who are the
 source and ground of both knowledge and ignorance -- that is, of all
 experiences whatever.
 
-\section*{12}
+\section{12. True knowledge is self-eggulgent: it is neither knowledge
+nor ignorance}
 
 \begin{quote}
-True knowledge is neither knowledge or ignorance. Objective knowledge
-is not true knowledge. Because the Self is self-effulgent, having no
-second to know or be known, it is Supreme Knowledge -- not empty
-nothingness.
+  True knowledge is neither knowledge or ignorance. Objective knowledge
+  is not true knowledge. Because the Self is self-effulgent, having no
+  second to know or be known, it is Supreme Knowledge -- not empty
+  nothingness.
 \end{quote}
 
 \index{knowledge!objective}\index{void}
@@ -402,13 +411,15 @@ ever-pure (thought-free). This purity is not emptiness because of the
 lack of perceivable objectives in it, but the ever-shining plenum of
 Awareness-Being (\emph{chit-Sat}).
 
-\section*{13}
+\section{13. Knowledge of diversity is ignorance, yet it is not apart
+  from the Self, like the shapes of ornaments which are not apart from
+the gold.}
 
 \begin{quote}
-The Self alone is knowledge, is truth. Knowledge of the diversity is
-ignorance, is false knowledge. Yet ignorance is not apart from the
-Self, which is knowledge. Are the ornaments different from the gold
-which is real?
+  The Self alone is knowledge, is truth. Knowledge of the diversity is
+  ignorance, is false knowledge. Yet ignorance is not apart from the
+  Self, which is knowledge. Are the ornaments different from the gold
+  which is real?
 \end{quote}
 
 \index{diversity}
@@ -424,13 +435,15 @@ which they are made -- the pure mind -- is true knowledge.
 as thoughts come from the Self and are witnessed by it (verses six and
 seven). 
 
-\section*{14}
+\section{14. ``You'' and ``he'' exist when the ``I'' exists. If the
+  root of the ``I'' --- the One --- is found, ``You'' and ``he'' will
+  also shine as the One.}
 
 \begin{quote}
-The ``I'' existing, ``you'' and ``he'' also exist. If by investigating
-the truth of the ``I'' the ``I'' ceases, ``you'' and ``he'' will also
-cease and will shine as the One. This is the natural state of one's
-being.
+  The ``I'' existing, ``you'' and ``he'' also exist. If by investigating
+  the truth of the ``I'' the ``I'' ceases, ``you'' and ``he'' will also
+  cease and will shine as the One. This is the natural state of one's
+  being.
 
 \end{quote}
 
@@ -443,13 +456,14 @@ consciously and by all men in dreamless sleep. In dreamless sleep
 remains in one's native state -- in the true ``I'' but generally
 without retaining memory of this condition on awakening.
 
-\section*{15}
+\section{15. Past and future are only the present when they occur,
+  thus the present alone exists.}
 
 \begin{quote}
-On the present the past and the future stand. They too are the present
-in their times. Thus the present alone exists. Ignoring the present,
-and seeking to know the past and the future, is like trying to count
-without the initial unit.
+  On the present the past and the future stand. They too are the present
+  in their times. Thus the present alone exists. Ignoring the present,
+  and seeking to know the past and the future, is like trying to count
+  without the initial unit.
 \end{quote}
 
 The present \emph{is} always, for even the past was the present in its
@@ -469,12 +483,12 @@ our mind, as past and future are --- acts of our memory.
 \index{future}
 \index{past}
 
-\section*{16}
+\section{16. Time and space do not exist apart from the Self.}
 
 \begin{quote}
-Do time and space exist apart from us? If we are the body we are
-affected by time and space. But are we the body? We are the same now,
-then and forever.
+  Do time and space exist apart from us? If we are the body we are
+  affected by time and space. But are we the body? We are the same now,
+  then and forever.
 \end{quote}
 
 \index{time}\index{space}\index{body}
@@ -504,7 +518,27 @@ themselves to be pure spirit are bodiless, timeless and spaceless; and
 Bhagavan affirms, they are thus free from the hallucination of ``We
 alone are; time and space are not''.
 
-\section*{1}
+\section{17. To those who have not realized, the ``I'' is of the size
+  of the body. To those who have, it is limitless.}
+
+\begin{quote}
+  To those who have not realized the Self, as well as to those who
+  have, the body is ``I''. To the form the ``I'' is only the size of
+  the body; whereas to those who have realized the Self within the
+  body, the ``I'' shines without limits. This is the difference
+  between the two.
+\end{quote}
+
+\index{body}
+
+The \emph{jnani} (the Self-realized) like everybody else, refers to
+the body as ``I''. Whereas the others confine their ``I'' to the flesh
+and body and to its height and breadth, the \emph{jnani} takes his
+``I'' to be the life which pervades the body as well as the limitless
+space outside it. Realization is the direct and undubitable proof of
+this truth. 
+
+\section{18. }
 
 \begin{quote}
 
@@ -512,7 +546,7 @@ alone are; time and space are not''.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section*{1}
+\section{1}
 
 \begin{quote}
 
@@ -520,7 +554,7 @@ alone are; time and space are not''.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section*{1}
+\section{1}
 
 \begin{quote}
 
@@ -528,7 +562,7 @@ alone are; time and space are not''.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section*{1}
+\section{1}
 
 \begin{quote}
 
@@ -536,15 +570,7 @@ alone are; time and space are not''.
 
 \index{body}\index{sheathes}\index{world}\index{ghost}
 
-\section*{1}
-
-\begin{quote}
-
-\end{quote}
-
-\index{body}\index{sheathes}\index{world}\index{ghost}
-
-\section*{1}
+\section{1}
 
 \begin{quote}
 
@@ -554,12 +580,12 @@ alone are; time and space are not''.
 
 
 
-\section*{23}
+\section{23}
 
 \begin{quote}
-The body does not say ``I''. In sleep no one admits he is not. The
-``I'' emerging, all else emerges. Inquire with a keen mind whence this
-``I'' arises.
+  The body does not say ``I''. In sleep no one admits he is not. The
+  ``I'' emerging, all else emerges. Inquire with a keen mind whence this
+  ``I'' arises.
 \end{quote}
 
 The body, being insentient, knows nothing about ``I'' and ``not-I'',
@@ -573,15 +599,15 @@ conduct an inquiry into its source.
 \index{inquiry}
 \index{I}
 
-\section*{24}
+\section{24}
 
 \begin{quote}
-The insentient body does not say ``I.'' The ever-existennt
-consciousness is not born (thus cannot say ``I''). The ``I'' of the
-size of the body springs up between the two: it is known as
-chit-jada-granthi (the knot which ties together the sentient and
-insentient), bondage, individuality, ego, subtle body, samsara, mind,
-etc. 
+  The insentient body does not say ``I.'' The ever-existennt
+  consciousness is not born (thus cannot say ``I''). The ``I'' of the
+  size of the body springs up between the two: it is known as
+  chit-jada-granthi (the knot which ties together the sentient and
+  insentient), bondage, individuality, ego, subtle body, samsara, mind,
+  etc. 
 \end{quote}
 
 The body, unaware of its own existence, does not say ``I''; and the
@@ -601,14 +627,14 @@ death. In India, the wife is significantly also called
 
 \index{chit-jada-granthi}\index{sentient}\index{insentient}\index{body!subtle}\index{individuality}\index{bondage}\index{samsara}\index{mind}\index{knot}
 
-\section*{25}
+\section{25}
 
 
 \begin{quote}
-Know that this formless ghost (the ego or ``I'') springs up in a form
-(body). Taking a form it lives, feeds and grows. Leaving a form it
-picks up another, but when it is inquired into, it drops the form and
-takes to flight.
+  Know that this formless ghost (the ego or ``I'') springs up in a form
+  (body). Taking a form it lives, feeds and grows. Leaving a form it
+  picks up another, but when it is inquired into, it drops the form and
+  takes to flight.
 \end{quote}
 
 The ego is a vertiable ghost. A ghost is a disembodied spirit that
@@ -629,7 +655,7 @@ self-knowledge (jnana).
 
 \index{ego}\index{body}\index{eating}\index{growth}
 
-\section*{26}
+\section{26}
 
 \begin{quote}
   The ego existing, all else exists. The ego not existing, nothing
@@ -645,7 +671,7 @@ that the same surrender can be achieved by the method of
 
 \index{ego}\index{inquiry}
 
-\section*{27}
+\section{27}
 
 \begin{quote}
 
@@ -659,14 +685,14 @@ that the same surrender can be achieved by the method of
 
 \index{}
 
-\emph{The non-emergence of the ``I'' means egolessness, the natural
-  state of being or THAT. To stop the ego from rising we have to find
-  the place of its emergence and annihilate it there, before it
-  emerges, so that we may consciously ever abide as THAT, egoless, in
-  the heart, as we unconsciously do in sleep. The word ``place''
-  stands here for Heart.
+\emph{The non-emergence of the ``I''} means egolessness, the natural
+state of being or THAT. To stop the ego from rising we have to find
+the place of its emergence and annihilate it there, before it
+emerges, so that we may consciously ever abide as THAT, egoless, in
+the heart, as we unconsciously do in sleep. The word ``place''
+stands here for Heart.
 
-\section*{28}
+\section{28}
 
 \begin{quote}
   Like the diver who dives to recover what has fallen into deep water,
@@ -691,7 +717,7 @@ its natural purity, the mot previous Self, ``whence the I emerges.''
 
 \index{}
 
-\section*{29}
+\section{29}
 
 \begin{quote}
   Seeking the source of the ``I'' with a mind turned inwards and no
@@ -715,7 +741,7 @@ mind as mentioned in the previous commentary, which gradually grows in
 depth and duration. That is why the path of the \emph{vichara} is
 known as the path of knowlege (\emph{jnana marga}).
 
-\section*{30}
+\section{30}
 
 \begin{quote}
   Inquiring ``Who am I?'' within the mind, and reaching the heart, the
@@ -740,7 +766,7 @@ ignorance, or as Self, the substratum and source of the world.
 ``Inquring within the mind who am I?'' is an affirmation once again,
 that the quest has to be carried out with the mind.
 
-\section*{31}
+\section{31}
 
 \begin{quote}
   What remains to be done by him, who, having extinguished the ego,
@@ -763,7 +789,7 @@ has no further actions to do, nor purpose to achieve. All his
 aspirations having been fulfilled, his sole preoccupation remains that
 ocean of bliss, which passes the understanding of the common man.
 
-\section*{32}
+\section{32}
 
 \begin{quote}
   Despite the Vedas proclaiming ``Thou art THAT'', it is sheer
@@ -783,7 +809,7 @@ body-thought, and will reach the \emph{tanumanai} state (the rarified
 mind) through which the pure awareness can be directly
 apprehended. This is the silent heart itself.
 
-\section*{33}
+\section{33}
 
 \begin{quote}
   It is ludicrous to thik ``I know myself'', or ``I do not know
@@ -812,7 +838,7 @@ more correctly, the substance -- of all one knows. It is evident that
 the ``I'' being pure indivisible consciousness, is experienced by the
 \emph{jnani} as the same in all.
 
-\section*{34}
+\section{34}
 
 \begin{quote}
   Without trying to realise in the heart that reality which is the
@@ -831,7 +857,7 @@ disputants, not to speak of the vanity and arrogance they create in
 the hearts of the winners. They should thus be shunned by seekers of
 Truth and of Peace everlasting.
 
-\section*{35}
+\section{35}
 
 \begin{quote}
   To seek and abide in that which is always attained is true
@@ -877,7 +903,7 @@ present at the true nature of the ego whether ego is conscious of it
 or not (see comment on verse 30) before the birth of the body, during
 its existence and after its disintegration at death.
 
-\section*{36}
+\section{36}
 
 \begin{quote}
   The thought ``I am not the body'' helps on to meditate ``I am not
@@ -904,7 +930,7 @@ or THAT, which \emph{sadhakas} try to isolate from the body and
 perceive by itself, in its aloneness (\emph{kaivalya}). \emph{That} is
 the Self-realisation or self-cognition we are after.
 
-\section*{37}
+\section{37}
 
 \begin{quote}
   The theory that in practical life duality prevals, whereas
@@ -932,7 +958,7 @@ the chair, the door, the window and a million other objects. But the
 realized man is free from this false imagination: he knows himself to
 be the tenth man.
 
-\section*{38}
+\section{38}
 
 \begin{quote}
   So long as a man feels himself the doer, he reaps the fruits of his
@@ -993,7 +1019,7 @@ responsibility. In the whole Vedantic literature one does not find a
 single reference to the transference of sins, but always to karma.
 
 
-\section*{39}
+\section{39}
 
 \begin{quote}
   Bondage and Liberation exist so long as thoughts of bondage and
@@ -1015,7 +1041,7 @@ Self will reveal itself and will dispel all notions, all senses, and
 all thoughts, including the sense and thought of \emph{jivahood}
 (individuality) itself.
 
-\section*{40}
+\section{40}
 
 \begin{quote}
   It is said that Liberation is with form or without form, or with and
@@ -1059,13 +1085,23 @@ OM SHANTI SHANTI SHANTIHI
 
 I, Terrence Monroe Brannon, decided that there needed to be a freely
 available version of the one book which summarizes Advaita Vedanta. I
-first learned of this text in my dealings with the guru Arunachala
+first learned of this text in my dealings with the late, great
+guru Arunachala
 Ramana and his spiritual institute AHAM.com
+
+I will never forget the power of this guru to evoke change in
+consciousness
+right over the phone by doing nothing but SPEAKING THE TRUTH. Truly an
+amazing person who gave all of his spiritual services at way less than
+current going rates.
 
 I took the liberty of changing British English to American English.
 
-Feedback/corrections are welcome: TheQuietCenter\@gmail.com or
-http://www.LivingCosmos.org
+Feedback/corrections are welcome: 
+\begin{itemize}
+\item \verb+TheQuietCenter@gmail.com+
+\item \verb+http://www.LivingCosmos.org+
+\end{itemize}
 
 \chapter{Back Cover}
 
