--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -541,10 +541,32 @@ this truth.
 \section{18. }
 
 \begin{quote}
-
+  To those who have realized the Self and to those who have not, the
+  world is real. To the latter its reality is confined to the spatial
+  measurements of the world, whereas to the former it is formless, and
+  shines as the substratum of the world. This is the difference
+  between the two.
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{world}
+
+The space which the world occupies is the limit of its reality to the
+ignorant (\emph{ajnani}), but to the \emph{jnani} it is the limitless
+substratum of the world. Science tells us that space is not material,
+that is, it is not made of atoms and molecules, like the objects which
+occupy it, to be visible to the eye. The perception of space by the
+eye is the worst illusion men suffer. Space is a mental concept,
+i.e. it is a project \emph{by the mind to make the reality of the
+  world plausible}. If space is a concept, so should be the objects
+that occupy it, notwithstanding their atoms and molecules. All the
+universes and galaxies in the Cosmos are made of atoms and nothing
+else. But what are atoms after all but the indestructible absolute
+energy? The \emph{jnani} experiences this energy as the pure
+intelligence that is himself. The absolute reality is thus absolute
+energy as well as absolute energy as well as absolute consciousness
+--- \emph{Sat} as well as \emph{Chit} -- omnipotent, omnipresent as
+well as omniscient, the world as well as the creator and seer of the
+world. 
 
 \section{1}
 
