--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -538,7 +538,9 @@ and body and to its height and breadth, the \emph{jnani} takes his
 space outside it. Realization is the direct and undubitable proof of
 this truth. 
 
-\section{18. }
+\section{18. To those who have not realized, the world is confined to
+  the space it occupies. To those who have, it is the limitless
+  substratum of the world.}
 
 \begin{quote}
   To those who have realized the Self and to those who have not, the
@@ -568,7 +570,7 @@ energy as well as absolute energy as well as absolute consciousness
 well as omniscient, the world as well as the creator and seer of the
 world. 
 
-\section{1}
+\section{19. }
 
 \begin{quote}
 
