--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -573,10 +573,15 @@ world.
 \section{19. }
 
 \begin{quote}
-
+  Disputations as to which prevails over the other, fate or free-will,
+  are for those who have no knowledge of the Self, which is the ground
+  of both fate and free-will. Those who have realized this ground are
+  free from both. Will they be caught by them again?
 \end{quote}
 
-\index{body}\index{sheathes}\index{world}\index{ghost}
+\index{fate}\index{free-will}
+
+Fate or destiny is karma.
 
 \section{1}
 
