still on verse 19 commentary

--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -581,9 +581,24 @@ world.
 
 \index{fate}\index{free-will}
 
-Fate or destiny is karma.
+Fate or destiny is karma. Karma, like free-will, is unintelligent, and
+can thus affect only the unintelligent in man, namely, thebody, and
+not the intelligent being, how is the lord of the body. When
+realization of this is acheived, karma and free-will will have no feet
+to stand on and will crumble to dust of their own accord.
 
-\section{1}
+The scholar do not worry over whether destiny and free-will affect the
+individual or his body, but argue about which of them dominates the
+other in its operation. Our own approach to this question is
+simple. We exercise our will freely and let karma take care of
+itself. Vasishta Muni exhorts Rama to make constant efforts in his
+\emph{sadhana} and forget about all the complexities of destiny. He
+compares karma and free-will to two battling rams, of which the
+stronger will always win in the end. Thus strong efforts will overcome
+destiny.
+
+
+\section{20. }
 
 \begin{quote}
 
