plodding through verse 19

--- a/reality-in-40/reality-in-40.tex
+++ b/reality-in-40/reality-in-40.tex
@@ -597,6 +597,9 @@ compares karma and free-will to two battling rams, of which the
 stronger will always win in the end. Thus strong efforts will overcome
 destiny.
 
+Some theorists stretch themselves so far as to believe that even the
+exercise of the will is predestined, that is, destiny is always
+dominant, leaving no room for freedom of the will.
 
 \section{20. }
 
