--- a/sant-mat/ChangeLog
+++ b/sant-mat/ChangeLog
@@ -1,3 +1,11 @@
+2011-04-21    <thequietcenter@JCL4EVER>
+
+	* moved location of Harinandan Baba. 
+	* added comment of Pravesh K. Singh
+	* added realm chart of Aman Sandhu
+	* added Babuji Maharaj as a successor of Brahm Mishra
+	
+
 2011-03-29  Terrence Brannon  <thequietcenter@ubuntu>
 
 	* index.html: 
