kabir lineage expanded

--- a/sant-mat/ChangeLog
+++ b/sant-mat/ChangeLog
@@ -1,10 +1,16 @@
 2011-04-21    <thequietcenter@JCL4EVER>
 
-	* moved location of Harinandan Baba. 
-	* added comment of Pravesh K. Singh
+	* moved location of Harinandan Baba.
+	* added comment of Pravesh K. Singh about many ancient gurus
 	* added realm chart of Aman Sandhu
 	* added Babuji Maharaj as a successor of Brahm Mishra
-	
+	* added Madhu Paramhans Ji. His addition led to Kabir being listed
+	as a distinct lineage rather than being lumped in with Shabda misc
+	* Began to wonder if Supreme Master Ching Hai was initiated by
+	Sant Thakar Singh and whether Paul Twitchell was initiated by
+	Kirpal Singh. Not making any changes based on that possibly
+	accurate data.
+
 
 2011-03-29  Terrence Brannon  <thequietcenter@ubuntu>
 
