--- a/sant-mat/ChangeLog
+++ b/sant-mat/ChangeLog
@@ -1,15 +1,23 @@
 2011-04-21    <thequietcenter@JCL4EVER>
 
-	* moved location of Harinandan Baba.
-	* added comment of Pravesh K. Singh about many ancient gurus
-	* added realm chart of Aman Sandhu
-	* added Babuji Maharaj as a successor of Brahm Mishra
-	* added Madhu Paramhans Ji. His addition led to Kabir being listed
-	as a distinct lineage rather than being lumped in with Shabda misc
+	* moved location of Harinandan Baba based on information I saw in
+	a [Pravesh K. Singh
+	post](http://groups.yahoo.com/group/sant_santati/message/889) 
+	* added comment of Pravesh K. Singh about many ancient gurus (many
+	of whom are not listed in my lineage charts)
+	* added [realm chart of Aman
+	Sandhu](http://wayofmystics.webs.com/thepath.htm) 
+	* added Babuji Maharaj as a successor of Brahm Mishra, per
+	conversation with Michael Turner
+	* added [Madhu Paramhans Ji](http://www.sahibbandgi.org/), per
+	[message from robert
+	s](http://groups.yahoo.com/group/sant_santati/message/876). Adding 
+	him led to Kabir being listed as a distinct root lineage rather
+	than being lumped in with Shabda misc  
 	* Began to wonder if Supreme Master Ching Hai was initiated by
 	Sant Thakar Singh and whether Paul Twitchell was initiated by
-	Kirpal Singh. Not making any changes based on that possibly
-	accurate data.
+	Kirpal Singh. Not making any changes based on these speculations.
+
 
 
 2011-03-29  Terrence Brannon  <thequietcenter@ubuntu>
