added Sant Ram Singh Ji

--- a/sant-mat/ChangeLog
+++ b/sant-mat/ChangeLog
@@ -17,7 +17,7 @@
 	* Began to wonder if Supreme Master Ching Hai was initiated by
 	Sant Thakar Singh and whether Paul Twitchell was initiated by
 	Kirpal Singh. Not making any changes based on these speculations.
-
+	* Added Sant Ram Singh Ji as initiate of Baba Somanath
 
 
 2011-03-29  Terrence Brannon  <thequietcenter@ubuntu>
